DEMO-362: Fix flight-direction-item-selected width for the horizontal alignment

--- a/src/assets/styles/scott.css
+++ b/src/assets/styles/scott.css
@@ -533,7 +533,7 @@ body.loading .modalLoader {
 }
 
 .flight-direction-item-selected {
-  width: 100px;
+  width: 120px;
   height: 100px;
   background-color: #004a99;
   font-family: WhitneyHTF-SemiBoldCondensed;
